--- a/style.css
+++ b/style.css
@@ -18,3 +18,30 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
      }
+    
+    
+ h1,
+ h2 {
+       text-align: center;
+       margin-bottom: 20px;
+     }
+     
+     form {
+       display: flex;
+       flex-direction: column;
+     }
+     
+     .form-group {
+       display: flex;
+       flex-direction: column;
+       margin-bottom: 10px;
+     }
+     
+     label {
+       font-weight: bold;
+       margin-bottom: 5
+     }
+    
+    
+
+
